# ZstdUnity

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  make_android.sh  make_ios.sh  make_linux.sh  make_osx.sh  make_test_data.sh  make_windows.bat  zstd.c
Assets/: Sample.unity
Assets/Resources/: sample.txt  sample_deflated.bytes  sample_dict.bytes  sample_dictdeflated.bytes
Assets/Resources/txt/: sample0.txt  sample1.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt  sample6.txt  sample7.txt  sample8.txt  sample9.txt
Assets/Scripts/: ZstdLoadTest.cs
Assets/Uzstd/: Uzstd.cs
